動作確認済み

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,16 @@
             "projectName": "grpc-server",
             "args": "",
             "envFile": "${workspaceFolder}/.env"
+        },
+        {
+            "type": "java",
+            "name": "Spring Boot-GrpcServerApplication<grpc-server>",
+            "request": "launch",
+            "cwd": "${workspaceFolder}",
+            "mainClass": "com.example.grpc.GrpcServerApplication",
+            "projectName": "grpc-server",
+            "args": "",
+            "envFile": "${workspaceFolder}/.env"
         }
     ]
 }
